# shaip

./: Makefile.in  README  configure  configure.in  devicenode.h  find_interface.c  find_interface.h  icmpping.c  icmpping.h  main.c  makeaddress.c  makeaddress.h  mkinstalldirs  run_shaip.sh  shaip.8  shaip.conf  shaip.state  socketnode.h  stringfunc.c  stringfunc.h  studstad.conf  varlist.c  varlist.h
