AC_INIT(main.c)
PRODUCT=shaip
VERSION=1.3
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)

dnl Checks for programs.
if test $CC = "gcc"; then
	CFLAGS="$CFLAGS -Wall"
fi
AC_CHECK_TOOL(STRIP, strip, :)
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h unistd.h netinet/in.h netdb.h arpa/inet.h, ,)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_SUBST(RANLIB)
AC_SUBST(STRIP)

AC_OUTPUT(Makefile)




